# TransformerLens_Practice

./: check_cuda.py  pyproject.toml  requirements.txt
Activation_Patching/: head_patching.py  layer_head_causal_patching.ipynb  layer_patching.py
IOI Circuit/: ioi_circuit.ipynb
Logit_Lens/: logit_lens.py  logit_lens_basic.ipynb
