[project]
name = "transformerlens-practice"
version = "0.1.0"
description = "TransformerLens Practice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy<2.0.0",
    "pyarrow<16.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformer-lens>=3.1.0",
    "tuned-lens>=0.2.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
